fix(navbar): page overflow and padding

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,13 @@
 @charset "utf-8";
 /* Global Styles */
 
-body, main {
-	margin-left: auto;
-	margin-right: auto;
-	width: 92%;
-	padding-left: 2.275%;
-	padding-right: 2.275%;
+html,
+body,
+main {
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	overflow-x: hidden;
 }
 
 /* Header */
